tests/ui-unstable/not_on_fn.stderr
error[E0506]: cannot assign to `source` because it is borrowed
 --> $DIR/not_on_fn.rs:7:5
  |
6 |     let mutable_alias = &mut source;
  |                         ----------- borrow of `source` occurs here
7 |     source = 2;
  |     ^^^^^^^^^^ assignment to borrowed `source` occurs here
8 |     *mutable_alias = 3;
  |     ------------------ borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
